# galaxy-garden-2

./: .astylerc  Makefile  README.md  compile_commands.json  fragment_shader.fs  fragment_shader.glsl  glad.c  initialization.cpp  initialization.hpp  main.c  main.cpp  meson.build  shader.cpp  shader.hpp  vec.cpp  vec.hpp  vertex_shader.vs
include/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
